<resources>
    <string name="app_name">DejaVu</string>
    <string name="facebook_app_id">1736014946433094</string>
    <string name="tag_messenger">Messenger</string>
    <string name="tag_line">LINE</string>
    <string name="package_name_messenger">com.facebook.orca</string>
    <string name="package_name_line">jp.naver.line.android</string>
    <string name="log_textcrawler_failed">TextCrawler get content failed.</string>

    <string name="des_d">D</string>
    <string name="dialog_hint">Edit Title</string>
    <string name="image_description_thumbnail">Image Thumbnail</string>
    <string name="image_description_delete">Delete Button</string>
    <string name="image_description_edit">Edit Button</string>
    <string name="image_description_dejavu">Deja Vu</string>
    <string name="no_content_text">NO CONTENT</string>
    <string name="menu_title_messenger">Messenger</string>
    <string name="menu_title_line">Line</string>
    <string name="snack_message_change_app_messenger">Share app is change to Messenger.</string>
    <string name="snack_message_change_app_line">Share app is change to Line.</string>
    <string name="snack_message_not_installed_messenger">Messenger is not installed!</string>
    <string name="snack_message_not_installed_line">Line is not installed!</string>
    <string name="menu_title_search">search</string>
    <string name="title_progress_loading">Loading…</string>
    <string name="msg_progress_parsing_url">Parsing the input content…</string>
    <string name="navigation_title_uri">URI</string>
    <string name="navigation_title_image">Image</string>
    <string name="navigation_title_settings">Settings</string>
    <string name="msg_permission_line_share">We can not share images to line without the permission.</string>
    <string name="btn_text_next">Next</string>
    <string name="title_permission_ask_again">Permissions Required</string>
    <string name="msg_permission_ask_again">This app may not work correctly without the requested permissions.
        Open the app settings screen to modify app permissions.</string>
    <string name="setting_title_launch_page">Default Launch Page</string>
    <string name="setting_title_send_platform">Default Sending Platform</string>
</resources>
