<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_teal_50"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/setting_title_launch_page"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/navigation_title_uri"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/setting_sw_launch_page"
        app:layout_constraintEnd_toStartOf="@+id/setting_sw_launch_page" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/setting_sw_launch_page"
        style="@style/SwitchCompatTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:switchPadding="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/navigation_title_image"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/setting_sw_launch_page"
        app:layout_constraintStart_toEndOf="@+id/setting_sw_launch_page" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/setting_title_send_platform"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/setting_sw_launch_page" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/menu_title_line"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/setting_sw_send_platform"
        app:layout_constraintEnd_toStartOf="@+id/setting_sw_send_platform" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/setting_sw_send_platform"
        style="@style/SwitchCompatTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/setting_sw_launch_page"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:switchPadding="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/menu_title_messenger"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/setting_sw_send_platform"
        app:layout_constraintStart_toEndOf="@+id/setting_sw_send_platform" />

</android.support.constraint.ConstraintLayout>